--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
 	</div>
 	<div class="box3" style="border-radius: 15px;">
 	</div>
+	<div class="q1" style="display: none;">
+		<img class="col-5" style="margin-left: 430px;" src="Без66названия.jfif">
+	</div>
+	<div class="q2" style="display: none;">
+		<img class="col-4" style="margin-left: 500px;" src="Без77названия.jfif">
+	</div>
 
 
 
@@ -81,6 +87,8 @@
 			alert('Попытки закончились')
 			document.querySelector('.box1').style.display = "none";
 			document.querySelector('.box2').style.display = "none";
+			document.querySelector('.box3').style.display = "none";
+			document.querySelector('.q2').style.display = "block";
 			document.querySelector('.text1').innerHTML = attemps;
 		}
 	}
@@ -93,6 +101,8 @@
 			alert('Попытки закончились')
 			document.querySelector('.box1').style.display = "none";
 			document.querySelector('.box2').style.display = "none";
+			document.querySelector('.box3').style.display = "none";
+			document.querySelector('.q2').style.display = "block";
 			document.querySelector('.text1').innerHTML = attemps;
 		}
 	}
@@ -106,6 +116,7 @@
 			document.querySelector('.box1').style.display = "none";
 			document.querySelector('.box2').style.display = "none";
 			document.querySelector('.box3').style.background = "none";
+			document.querySelector('.q1').style.display = "block";
 			document.querySelector('.text1').innerHTML = attemps;
 		}
 	}
